# lemonade-vision-server

./: .gitignore  .pr_agent.toml  CLAUDE.md  GEMINI.md  Makefile  README.md  ngrok.sh  pyproject.toml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/security/: audit-status.json
.github/: runners.json
.github/workflows/: ci.yml  codex-review.yml  gemini-review.yml  monitor_selfhosted_runners.yml  openhands-review.yml  pr-agent-review.yml  qodo-merge.yml  runner_heartbeat.yml  test-new-runner.yml
.serena/: project.yml
docs/superpowers/plans/: 2026-05-24-vision-mobile.md
docs/superpowers/specs/: 2026-05-24-vision-mobile-design.md
docs/wiki/: README.md  architecture.md  confidence-scoring.md  scan-pipeline.md
scripts/: build_dist.sh  run.sh
src/lemonade_vision/: __init__.py  draft.py  models.py  server.py  session.py
src/lemonade_vision/api/: capture.py  deduce.py  product.py
src/lemonade_vision/pipeline/: background.py  barcode.py  confidence.py  dimensions.py  embeddings.py  frames.py  vlm.py
src/lemonade_vision/store/: image_store.py  product_db.py  schema.py  vector_db.py
tests/: test_background.py  test_barcode.py  test_capture_audio.py  test_confidence.py  test_deduce.py  test_dimensions.py  test_draft.py  test_embeddings.py  test_frames.py  test_models.py  test_pipeline_integration.py  test_routes.py  test_session.py  test_store.py  test_vlm.py
tests/fixtures/: depth-sample.json
