[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lemonade-vision"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyzbar>=0.1.9",
    "Pillow>=10.4",
    "numpy>=1.26",
    "numba>=0.59",
    "open-clip-torch>=2.26",
    "torch>=2.3",
    "chromadb>=0.5",
    "rembg>=2.0",
    "qrcode[pil]>=7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pyright>=1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/lemonade_vision"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
